--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,9 @@ h6 {
 body {
   font-family: var(--font-secondary);
 }
+
+.rad-icon {
+  fill: red; /* Change to any color */
+  width: 30px;
+  height: 30px;
+}
